--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,82 @@
 
+@Article{	  eckert2008field,
+  author	= {Eckert, Penelope},
+  journal	= {Journal of Sociolinguistics},
+  number	= {4},
+  pages		= {453--476},
+  title		= {Variation and the indexical field},
+  volume	= {12},
+  year		= {2008}
+}
+
+@InBook{	  sportiche2017intensionality,
+  address	= {Wien},
+  author	= {Sportiche, Dominique},
+  booktitle	= {Festschrift f{\"u}r Martin Prinzhorn},
+  editor	= {Mayr, Clemens and Williams, Edwin},
+  title		= {(Im)possible intensionality},
+  year		= {2017}
+}
+
+@Article{	  saab2022expressive,
+  author	= {Saab, Andr{\'e}s},
+  journal	= {Proceedings of SALT},
+  title		= {Introducing expressives through equations Implications for
+		  the theory of nominal predication in Romance},
+  volume	= {32},
+  year		= {2022}
+}
+
+@InBook{	  beltrama2021socialmeaning,
+  author	= {Beltrama, Andrea and Casasanto, Laura Staum},
+  booktitle	= {Social Meaning and Linguistic Variation: Theorizing the
+		  Third Wave},
+  editor	= {Hall-Lew, Lauren and Moore, Emma and Podesva, Robert J.},
+  pages		= {80-104},
+  publisher	= {Cambridge University Press},
+  title		= {The Social Meaning of Semantic Properties},
+  year		= {2021}
+}
+
+@Book{		  hall-lew2021social,
+  author	= {Hall-Lew, Lauren and Moore, Emma and Podesva, Robert J.},
+  editor	= {Hall-Lew, Lauren and Moore, Emma and Podesva, Robert J.},
+  pages		= {406},
+  publisher	= {Cambridge University Press},
+  title		= {Social Meaning and Linguistic Variation: Theorizing the
+		  Third Wave},
+  year		= {2021}
+}
+
+@Article{	  beltrama2019like,
+  author	= {Beltrama, Andrea and Hanink, Emily A.},
+  journal	= {Journal of Linguistics},
+  number	= {1},
+  pages		= {1--34},
+  title		= {Marking imprecision, conveying surprise:Like between
+		  hedging and mirativity},
+  volume	= {55},
+  year		= {2019}
+}
+
+@Article{	  beltrama2022context,
+  author	= {Beltrama, Andrea and Solt, Stephanie and Burnett,
+		  Heather},
+  journal	= {Language in Society},
+  pages		= {1--31},
+  title		= {Context, precision, and social perception: A
+		  sociopragmatic study},
+  year		= {2022}
+}
+
+@PhDThesis{	  aparicio2017imprecision,
+  address	= {Chicago},
+  author	= {Aparicio Terrasa, Helena},
+  school	= {University of Chicago},
+  title		= {Processing Context-Sensitive Expressions: The Case of
+		  Gradable Adjectives and Numerals}
+}
+
 @Book{		  culicover1984locality,
   address	= {NY},
   author	= {Culicover, Peter and Wilkins, Wendy},
