--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,10 @@
 
+@Unpublished{	  pesetsky1991inf,
+  author	= {Pesetsky, David},
+  title		= {Zero Syntax. Vol. 2: Infinitives},
+  year		= {1991}
+}
+
 @Article{	  eckert2008field,
   author	= {Eckert, Penelope},
   journal	= {Journal of Sociolinguistics},
