--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,109 @@
 
+@Article{	  lamont2022directional,
+  author	= {Lamont, Andrew},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {617--632},
+  title		= {Directional Constraint Evaluation Solves the Problem of
+		  Ties in Harmonic Serialism},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  kimura2022movement,
+  author	= {Kimura, Takayuki},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {608--616},
+  title		= {Movement and Islands in Right Node Raising},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  akkus2022evidence,
+  author	= {Akku{\c s}, Faruk},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {589--607},
+  title		= {Evidence from Sason Arabic for {\=A}-Movement Feeding
+		  Case-Licensing Relations},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  sigurdsson2022hvor,
+  author	= {Sigurðsson, Halld{\'o}r {\'A}rmann and Wood, Jim and
+		  Sigurðsson, Einar Freyr},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {571--588},
+  title		= {Hvor `Each' Reciprocals and Distributives in Icelandic:
+		  E-Raising + Short Main Verb Movement},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  hallman2022head,
+  author	= {Hallman, Peter},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {551--570},
+  title		= {Head and Dependent Marking in Clausal Possession},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  donati2022whatever,
+  author	= {Donati, Caterina and Foppolo, Francesca and Konrad, Ingrid
+		  and Cecchetto, Carlo},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {522--550},
+  title		= {Whatever His Arguments, Whatever-Relatives Are Not Free
+		  Relatives: A Reply to Caponigro's Reply},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  barany2022agree,
+  author	= {B{\'a}r{\'a}ny, Andr{\'a}s and van der Wal, Jenneke},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {501--521},
+  title		= {We Don't Agree (Only) Upward},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  tollan2022ergativity,
+  author	= {Tollan, Rebecca and Clemens, Lauren},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {459--499},
+  title		= {Syntactic Ergativity as a Constraint on Crossing
+		  Dependencies: The Perspective from Mayan},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  huang2022possessor,
+  author	= {Huang, Nick},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {427--458},
+  title		= {How Subjects and Possessors Can Obviate Phasehood},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  ke2022agree,
+  author	= {Ke, Alan Hezao},
+  journal	= {Linguistic Inquiry},
+  pages		= {1--33},
+  title		= {Can Agree and Labeling Be Reduced to Minimal Search},
+  year		= {2022}
+}
+
 @Unpublished{	  pesetsky1991inf,
   author	= {Pesetsky, David},
   title		= {Zero Syntax. Vol. 2: Infinitives},
