--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,44 @@
 
+@InBook{	  marantz1995minimalist,
+  address	= {Oxford},
+  author	= {Marantz, Alec},
+  booktitle	= {The principles and parameters approach to linguistic
+		  theory},
+  editor	= {Webelhuth, G.},
+  publisher	= {Blackwell},
+  title		= {The Minimalist Program},
+  year		= {1995}
+}
+
+@Book{		  fabregas2022verbalisations,
+  address	= {London},
+  author	= {F{\'a}bregas, Antonio},
+  publisher	= {Routledge},
+  title		= {Spanish Verbalisations and the Internal Structure of
+		  Lexical Predicates},
+  year		= {2022}
+}
+
+@Article{	  harley2014roots,
+  author	= {Harley, Heidi},
+  journal	= {Theoretical Linguistics},
+  number	= {3-4},
+  title		= {On the identity of roots},
+  volume	= {40},
+  year		= {2014}
+}
+
+@Article{	  antony2020gender,
+  author	= {Antony, Louise},
+  journal	= {Erkenntnis},
+  number	= {3},
+  pages		= {529--549},
+  title		= {Feminism Without Metaphysics or a Deflationary Account of
+		  Gender},
+  volume	= {85},
+  year		= {2020}
+}
+
 @Article{	  lamont2022directional,
   author	= {Lamont, Andrew},
   journal	= {Linguistic Inquiry},
