--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,32 @@
 
+@InBook{	  montague1973ptq,
+  address	= {Dordrecht},
+  author	= {Montague, Richard},
+  booktitle	= {Approaches to Natural Language},
+  editor	= {Hintikka, K. J. J. and Moravcsik, J. M. E. and Suppes,
+		  P.},
+  publisher	= {Springer Netherlands},
+  title		= {The Proper Treatment of Quantification in English},
+  year		= {1973}
+}
+
+@Book{		  hintikka1973approaches,
+  address	= {Dordrecht},
+  editor	= {Hintikka, K. J. J. and Moravcsik, J. M. E. and Suppes,
+		  P.},
+  publisher	= {Springer Netherlands},
+  title		= {Approaches to Natural Language},
+  year		= {1973}
+}
+
+@Book{		  dowty1980guideptq,
+  address	= {Dordrecht},
+  author	= {Dowty, David R. and Wall, Robert E. and Peters, Stanley},
+  publisher	= {Springer Netherlands},
+  title		= {Introduction to Montague Semantics},
+  year		= {1980}
+}
+
 @InBook{	  marantz1995minimalist,
   address	= {Oxford},
   author	= {Marantz, Alec},
