--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,24 @@
 
+@Article{	  yatsushiro2022certain,
+  author	= {Yatsushiro, Kazuko and Trinh, Tue and {\.Z}ygis, Marzena
+		  and Solt, Stephanie and Benz, Anton and Krifka, Manfred},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Certainly but not certain: The expression of subjective
+		  and objective probability},
+  volume	= {7},
+  year		= {2022}
+}
+
+@Article{	  hill2022vocative,
+  author	= {Hill, Virginia},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {The syntactization of kinship in vocative phrases},
+  volume	= {7},
+  year		= {2022}
+}
+
 @InBook{	  montague1973ptq,
   address	= {Dordrecht},
   author	= {Montague, Richard},
