--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  kaiser2022subjective,
+  author	= {Kaiser, Elsi},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Do perspective-sensitive anaphors and subjective
+		  adjectives exhibit perspectival uniformity? An experimental
+		  investigation},
+  volume	= {42},
+  year		= {2022}
+}
+
 @Article{	  yatsushiro2022certain,
   author	= {Yatsushiro, Kazuko and Trinh, Tue and {\.Z}ygis, Marzena
 		  and Solt, Stephanie and Benz, Anton and Krifka, Manfred},
