--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,24 @@
 
+@InCollection{	  hernanz2007si,
+  author	= {Hernanz, Maria Llu{\"\i}sa},
+  booktitle	= {Coreference, Modality, and Focus: Studies on the
+		  Syntax-semantics Interface},
+  editor	= {Eguren, Luis and Fern{\'a}ndez Soriano, Olga},
+  publisher	= {John Benjamins Publishing},
+  title		= {From polarity to modality: Some (a)symmetries between bien
+		  and s{\'i} in Spanish},
+  year		= {2007}
+}
+
+@Book{		  eguren2007coreference,
+  editor	= {Eguren, Luis and Fern{\'a}ndez Soriano, Olga},
+  pages		= {239},
+  publisher	= {John Benjamins Publishing},
+  title		= {Coreference, Modality, and Focus: Studies on the
+		  Syntax-semantics Interface},
+  year		= {2007}
+}
+
 @Article{	  kaiser2022subjective,
   author	= {Kaiser, Elsi},
   journal	= {Glossa: a journal of general linguistics},
