--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  rutherford1970adjunct,
+  author	= {Rutherford, William E.},
+  journal	= {Language},
+  number	= {1},
+  pages		= {97},
+  title		= {Some Observations concerning Subordinate Clauses in
+		  English},
+  volume	= {46},
+  year		= {1970}
+}
+
+@Article{	  charnavel2022picture,
+  author	= {Charnavel, Isabelle and Bryant, Shannon},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {The whole picture: Disentangling locality, logophoricity
+		  and subjecthood in English picture noun anaphora},
+  year		= {2022}
+}
+
 @InCollection{	  hernanz2007si,
   author	= {Hernanz, Maria Llu{\"\i}sa},
   booktitle	= {Coreference, Modality, and Focus: Studies on the
