--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,28 @@
 
+@Book{		  2022romanceling,
+  editor	= {Ledgeway, Adam and Maiden, Martin},
+  pages		= {930-940},
+  publisher	= {Cambridge University Press},
+  title		= {The Cambridge Handbook of Romance Linguistics},
+  year		= {2022}
+}
+
+@Book{		  mitkov2022computationalling,
+  editor	= {Mitkov, Ruslan},
+  publisher	= {Oxford University Press},
+  title		= {The Oxford Handbook of Computational Linguistics 2nd
+		  edition},
+  year		= {2022}
+}
+
+@Article{	  mcinnerney2022niching,
+  author	= {McInnerney, Andrew},
+  journal	= {Syntax},
+  title		= {Parenthetical niching: A third‐factor phonosyntactic
+		  analysis},
+  year		= {2022}
+}
+
 @Article{	  rutherford1970adjunct,
   author	= {Rutherford, William E.},
   journal	= {Language},
