--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,88 @@
 
+@InCollection{	  heycock2013predication,
+  address	= {Cambridge},
+  author	= {Heycock, Caroline},
+  booktitle	= {The Cambridge handbook of generative syntax},
+  editor	= {den Dikken, Marcel},
+  pages		= {322-351},
+  publisher	= {Cambridge University Press},
+  title		= {The syntax of predication},
+  year		= {2013}
+}
+
+@InCollection{	  corver2013extended,
+  address	= {Cambridge},
+  author	= {Corver, Norbert},
+  booktitle	= {The Cambridge handbook of generative syntax},
+  editor	= {den Dikken, Marcel},
+  pages		= {354-424},
+  publisher	= {Cambridge University Press},
+  title		= {Lexical categories and (extended) projection},
+  year		= {2013}
+}
+
+@Article{	  brito2016consecutivas,
+  author	= {Brito, Ana Maria and Matos, Gabriela},
+  journal	= {Revista da Associa{\c c}{\~a}o Portuguesa de
+		  Lingu{\'i}stica},
+  number	= {10},
+  pages		= {49--68},
+  title		= {Ora{\c c}{\~o}es consecutivas finitas em Portugu{\^e}s
+		  Europeu: uma an{\'a}lise sint{\'a}tica},
+  volume	= {2},
+  year		= {2016}
+}
+
+@InCollection{	  etxepare2012coordination,
+  author	= {Etxepare, Ricardo},
+  booktitle	= {The Handbook of Hispanic Linguistics},
+  editor	= {Hualde, Jos{\'e} Ignacio and Olarrea, Antxon and O'Rourke,
+		  Erin},
+  pages		= {503-531},
+  publisher	= {Wiley},
+  title		= {Coordination and Subordination},
+  year		= {2012}
+}
+
+@Article{	  alboiu2016raising,
+  author	= {Alboiu, Gabriela and Hill, Virginia},
+  journal	= {Syntax},
+  number	= {3},
+  pages		= {256--285},
+  title		= {Evidentiality and Raising to Object as A′-Movement: A
+		  Romanian Case Study},
+  volume	= {19},
+  year		= {2016}
+}
+
+@InCollection{	  hicks2017empty,
+  address	= {Hoboken, NJ, USA},
+  author	= {Hicks, Glyn},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
+  pages		= {1-42},
+  publisher	= {John Wiley \& Sons},
+  title		= {Tough-Movement},
+  year		= {2017}
+}
+
+@PhDThesis{	  browning1987null,
+  address	= {Cambridge, Mass.},
+  author	= {Browning, M. A.},
+  school	= {Massachusetts Institute of Technology},
+  title		= {Null Operator Constructions},
+  year		= {1987}
+}
+
+@Book{		  clarkrobin1990ttis,
+  address	= {London},
+  author	= {Clark, Robin},
+  pages		= {264},
+  publisher	= {Routledge},
+  title		= {Thematic theory in syntax and interpretation},
+  year		= {1990}
+}
+
 @Book{		  2022romanceling,
   editor	= {Ledgeway, Adam and Maiden, Martin},
   pages		= {930-940},
