--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@PhDThesis{	  erschler2018ellipsis,
+  address	= {Amherst},
+  author	= {Erschler, David},
+  school	= {University of Massachusetts},
+  title		= {Typology of bizarre ellipsis varieties},
+  year		= {2018}
+}
+
+@PhDThesis{	  kas2020information,
+  author	= {Kaps, Marju},
+  school	= {University of California Los Angeles (UCLA)},
+  title		= {Processing information structure: A case study of
+		  Contrastive Topics in Estonian},
+  year		= {2020}
+}
+
 @InCollection{	  heycock2013predication,
   address	= {Cambridge},
   author	= {Heycock, Caroline},
