--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,43 @@
 
+@Article{	  scontras2022number,
+  author	= {Scontras, Gregory},
+  journal	= {Linguistics and Philosophy},
+  number	= {5},
+  pages		= {1165--1196},
+  title		= {On the semantics of number morphology},
+  volume	= {45},
+  year		= {2022}
+}
+
+@Article{	  feinmann2022variable,
+  author	= {Feinmann, Diego},
+  journal	= {Linguistics and Philosophy},
+  number	= {5},
+  pages		= {1197--1226},
+  title		= {Domain restriction: the problem of the variable location
+		  revisited},
+  volume	= {45},
+  year		= {2022}
+}
+
+@Article{	  fabregas2022first,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {What 1sg forms tell us about Spanish theme vowels},
+  volume	= {7},
+  year		= {2022}
+}
+
+@Book{		  birner2021pragmatics,
+  address	= {NY},
+  author	= {Birner, Betty J.},
+  pages		= {192},
+  publisher	= {Oxford University Press, USA},
+  title		= {Pragmatics: A Slim Guide},
+  year		= {2021}
+}
+
 @PhDThesis{	  erschler2018ellipsis,
   address	= {Amherst},
   author	= {Erschler, David},
