--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,32 @@
 
+@Article{	  duncan2022begoing,
+  author	= {Duncan, Daniel},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {High aspect in the English be going to construction:
+		  Syntactic evidence},
+  volume	= {7},
+  year		= {2022}
+}
+
+@Article{	  aravind2022presupposition,
+  author	= {Aravind, Athulya and Fox, Danny and Hackl, Martin},
+  journal	= {Linguistics and Philosophy},
+  title		= {Principles of presupposition in development},
+  year		= {2022}
+}
+
+@Article{	  perezsaldanya2021esque,
+  author	= {P{\'e}rez Saldanya, Manuel and Hualde, Jos{\'e} Ignacio},
+  journal	= {Revista de Filolog{\'i}a Espa{\~n}ola},
+  number	= {2},
+  pages		= {421--448},
+  title		= {De las copulativas identificativas a las justificativas
+		  con es que},
+  volume	= {101},
+  year		= {2021}
+}
+
 @Article{	  scontras2022number,
   author	= {Scontras, Gregory},
   journal	= {Linguistics and Philosophy},
