--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  martingomez2020para,
+  author	= {Mart{\'i}n G{\'o}mez, F{\'e}lix},
+  journal	= {Verba: Anuario Galego de Filolox{\'i}a},
+  pages		= {27--54},
+  title		= {Las construcciones del tipo Para chulo, yo},
+  volume	= {47},
+  year		= {2020}
+}
+
+@Article{	  sanchezlopez1995para,
+  author	= {S{\'a}nchez L{\'o}pez, Cristina},
+  journal	= {Revista Espa{\~n}ola de Ling{\"u}{\'i}stica},
+  number	= {1},
+  pages		= {99--124},
+  title		= {Construcciones concesivas con para},
+  volume	= {25},
+  year		= {1995}
+}
+
 @Article{	  duncan2022begoing,
   author	= {Duncan, Daniel},
   journal	= {Glossa: a journal of general linguistics},
