--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,43 @@
 
+@InBook{	  arad2002universals,
+  address	= {Amsterdam},
+  author	= {Arad, Maya},
+  booktitle	= {Theoretical Approaches to Universals},
+  editor	= {Alexiadou, Artemis},
+  pages		= {15-40},
+  publisher	= {John Benjamins Publishing},
+  title		= {Universal features and language-particular morphemes},
+  year		= {2002}
+}
+
+@Book{		  alexiadou2002universals,
+  address	= {Amsterdam},
+  editor	= {Alexiadou, Artemis},
+  pages		= {316},
+  publisher	= {John Benjamins Publishing},
+  title		= {Theoretical Approaches to Universals},
+  year		= {2002}
+}
+
+@Article{	  ostrove2018vi,
+  author	= {Ostrove, Jason},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {4},
+  pages		= {1263--1289},
+  title		= {Stretching, spanning, and linear adjacency in Vocabulary
+		  Insertion},
+  volume	= {36},
+  year		= {2018}
+}
+
+@Book{		  lopez2020bilingual,
+  address	= {Cambridge},
+  author	= {L{\'o}pez, Luis},
+  publisher	= {Cambridge University Press},
+  title		= {Bilingual Grammar: Toward an Integrated Model},
+  year		= {2020}
+}
+
 @Article{	  martingomez2020para,
   author	= {Mart{\'i}n G{\'o}mez, F{\'e}lix},
   journal	= {Verba: Anuario Galego de Filolox{\'i}a},
