--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,47 @@
 
+@InBook{	  maldonado1999discurso,
+  address	= {Madrid},
+  author	= {Maldonado Gonz{\'a}lez, Concepci{\'o}n},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  publisher	= {RAE Espasa},
+  title		= {Discurso directo y discurso indirecto},
+  year		= {1999}
+}
+
+@Article{	  aznar1996monologo,
+  author	= {Aznar Angl{\'e}s, Eduardo},
+  journal	= {Bolet{\'i}n de la Unidad de Estudios Biogr{\'a}ficos},
+  pages		= {19--29},
+  title		= {Resituar el mon{\'o}logo interior},
+  volume	= {1},
+  year		= {1996}
+}
+
+@InBook{	  gallegohernanz2012defectivo,
+  address	= {Valladolid},
+  author	= {Gallego, {\'A}ngel J. and Hernanz, Maria Llu{\"\i}sa},
+  booktitle	= {Tradici{\'o}n y modernidad en la ling{\"u}{\'i}stica
+		  general},
+  editor	= {Ridruejo, Emilio and Sol{\'i}as Ar{\'i}s, Teresa and
+		  Mendiz{\'a}bal de la Cruz, Nives and Alonso Calvo, Sara},
+  pages		= {197-217},
+  publisher	= {Universidad de Valladolid},
+  title		= {Tipos de tiempo defectivo},
+  year		= {2012}
+}
+
+@Book{		  priest2014one,
+  address	= {Oxford},
+  author	= {Priest, Graham},
+  pages		= {281},
+  publisher	= {Oxford University Press},
+  title		= {One: Being an Investigation Into the Unity of Reality and
+		  of Its Parts, Including the Singular Object which is
+		  Nothingness},
+  year		= {2014}
+}
+
 @InBook{	  arad2002universals,
   address	= {Amsterdam},
   author	= {Arad, Maya},
