--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,131 @@
 
+@InBook{	  vankoppen2017complementizer,
+  address	= {Hoboken, NJ, USA},
+  author	= {van Koppen, Marjo},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  editor	= {Everaert, Martin and van Riemsdijk, Henk},
+  pages		= {1-40},
+  publisher	= {John Wiley \& Sons, Inc.},
+  title		= {Complementizer Agreement},
+  year		= {2017}
+}
+
+@InBook{	  hasegawa2017honorifics,
+  address	= {Hoboken, NJ, USA},
+  author	= {Hasegawa, Nobuko},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  editor	= {Everaert, Martin and van Riemsdijk, Henk},
+  publisher	= {John Wiley \& Sons, Inc.},
+  title		= {Honorifics},
+  year		= {2017}
+}
+
+@Article{	  barker2022a,
+  author	= {Barker, Chris},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {633--661},
+  title		= {Rethinking Scope Islands},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  brattico2022,
+  author	= {Brattico, Pauli},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {663--705},
+  title		= {Predicate Clefting and Long Head Movement in Finnish},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  bogomolova2022,
+  author	= {Bogomolova, Natalia},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {707--734},
+  title		= {Ergativity in Tabasaran: A Reply to Woolford 2015},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  bremmers2022,
+  author	= {Bremmers, David and Liu, Jianan and van der Klis, Martijn
+		  and Le Bruyn, Bert},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {735--752},
+  title		= {Translation Mining: Definiteness across Languages (A Reply
+		  to Jenks 2018)},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  bucking2022,
+  author	= {B{\"u}cking, Sebastian},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {187--224},
+  title		= {The Grammar of PP-like Free Relatives: Evidence from
+		  Subordinate wo-Clauses in German},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  major2022,
+  author	= {Major, Travis},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {780--807},
+  title		= {Revisiting the Syntax of Monsters in Uyghur},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  clem2022,
+  author	= {Clem, Emily},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {809--822},
+  title		= {Disharmony and the Final-Over-Final Condition in
+		  Amahuaca},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  hammerly2022,
+  author	= {Hammerly, Christopher},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {823--835},
+  title		= {The Pronoun Which Comprehenders Who Process It in Islands
+		  Derive a Benefit},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  rasin2022,
+  author	= {Rasin, Ezer},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {836--851},
+  title		= {Shifting Interactions and Countershifting Opacity: A Note
+		  on Opacity in Harmonic Serialism},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  smith2022,
+  author	= {Smith, Jennifer L.},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {852--864},
+  title		= {Some Formal Implications of Deletion Saltation},
+  volume	= {53},
+  year		= {2022}
+}
+
 @InBook{	  maldonado1999discurso,
   address	= {Madrid},
   author	= {Maldonado Gonz{\'a}lez, Concepci{\'o}n},
