--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  larson2019dp,
+  author	= {Larson, Richard K.},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  title		= {The DP Hypothesis and (A)Symmetries Between DP and CP},
+  volume	= {42},
+  year		= {2019}
+}
+
 @InBook{	  vankoppen2017complementizer,
   address	= {Hoboken, NJ, USA},
   author	= {van Koppen, Marjo},
