--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,37 @@
 
+@Book{		  dixon2004adjectives,
+  address	= {Oxford; New York},
+  editor	= {Aikhenvald, Alexandra Y. and Dixon, Richard M. W.},
+  publisher	= {Oxford University Press},
+  title		= {Adjective classes: a cross-linguistic typology},
+  year		= {2004}
+}
+
+@Book{		  matthews2014adjectives,
+  address	= {Oxford},
+  author	= {Matthews, P. H.},
+  publisher	= {Oxford University Press},
+  title		= {The positions of adjectives in English},
+  year		= {2014}
+}
+
+@Book{		  lomashvili2011complex,
+  address	= {Amsterdam; Philadelphia},
+  author	= {Lomashvili, Leila},
+  publisher	= {John Benjamins Pub. Co.},
+  title		= {Complex predicates: the syntax-morphology interface},
+  year		= {2011}
+}
+
+@Article{	  mccready2022constructive,
+  author	= {McCready, Elin},
+  journal	= {Proceedings of the 10th Conference on Computation,
+		  Communication, Aesthetics X},
+  pages		= {148--167},
+  title		= {Constructive Interpretation and Text Transformation},
+  year		= {2022}
+}
+
 @Article{	  larson2019dp,
   author	= {Larson, Richard K.},
   journal	= {Linguistic Analysis},
