--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,175 @@
 
+@Article{	  pavon2012dativo,
+  author	= {Pav{\'o}n Lucero, Mar{\'i}a Victoria},
+  journal	= {Verba},
+  pages		= {7--40},
+  title		= {El dativo con los verbos pseudocopulativos no
+		  aspectuales},
+  volume	= {40},
+  year		= {2012}
+}
+
+@Article{	  willer2020experience,
+  author	= {Willer, Malte and Kennedy, Christopher},
+  journal	= {Inquiry},
+  number	= {7},
+  pages		= {821--857},
+  title		= {Assertion, expression, experience},
+  volume	= {65},
+  year		= {2020}
+}
+
+@Article{	  davies2022adjective,
+  author	= {Davies, Catherine and Syrett, Kristen and Taylor, Lucy and
+		  Wilkes, Samantha and Zuniga‐Montanez, Cecilia},
+  journal	= {Language and Linguistics Compass},
+  number	= {11},
+  title		= {Supporting adjective learning across the curriculum by
+		  5--7 year‐olds: Insights from psychological research},
+  volume	= {16},
+  year		= {2022}
+}
+
+@Article{	  landau2009a,
+  author	= {Landau, Idan},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {343--346},
+  title		= {This Construction Looks Like a Copy Is Optional},
+  volume	= {40},
+  year		= {2009}
+}
+
+@PhDThesis{	  morenoquiben2022alternancia,
+  address	= {Alcal{\'a} de Henares, Madrid},
+  author	= {Moreno-Quib{\'e}n, Norberto},
+  school	= {Universidad de Alcal{\'a}},
+  title		= {Las estructuras de predicaci{\'o}n y la alternancia de
+		  c{\'o}pula},
+  year		= {2022}
+}
+
+@InBook{	  morimoto2011cortas,
+  address	= {Madrid},
+  author	= {Morimoto, Yuko},
+  booktitle	= {60 problemas de gram{\'a}tica},
+  editor	= {Escandell-Vidal, Mar{\'i}a Victoria and Leonetti, Manuel
+		  and S{\'a}nchez L{\'o}pez, Cristina},
+  publisher	= {Ediciones AKAL},
+  title		= {Las clases de Ignacio se nos hac{\'i}an cortas},
+  year		= {2011}
+}
+
+@Article{	  morimoto2020aspev,
+  author	= {Morimoto, Yuko and Universidad, Carlos III de Madrid},
+  journal	= {Revista Espa{\~n}ola de Ling{\"u}{\'i}stica},
+  number	= {50},
+  pages		= {243--270},
+  title		= {Aspecto y evidencialidad en la construcci{\'o}n V +
+		  {-\textit{te} $\sim$ -\textit{de}} + \textit{iru} de la
+		  lengua japonesa},
+  volume	= {2},
+  year		= {2020}
+}
+
+@Article{	  morimoto2006pseudomodal,
+  author	= {Morimoto, Yuko and Pav{\'o}n Lucero, Mar{\'i}a Victoria},
+  journal	= {Vii Congres De Linguistica General},
+  title		= {Los verbos pseudo-copulativos modales del espa{\~n}ol},
+  year		= {2006}
+}
+
+@PhDThesis{	  gomezrubio2021perifrasis,
+  address	= {Madrid},
+  author	= {G{\'o}mez Rubio, Joshua},
+  school	= {Universidad Complutense de Madrid},
+  title		= {Predicaci{\'o}n, gramaticalizaci{\'o}n y per{\'i}frasis
+		  verbales},
+  year		= {2021}
+}
+
+@Book{		  morimoto2007pseudo,
+  address	= {Madrid},
+  author	= {Morimoto, Yuko and Pav{\'o}n Lucero, Mar{\'i}a Victoria},
+  publisher	= {Arco Libros},
+  title		= {Los verbos pseudo-copulativos del espa{\~n}ol},
+  year		= {2007}
+}
+
+@InBook{	  mcginnis2000psychroots,
+  author	= {McGinnis, Martha},
+  booktitle	= {Current Work in Linguistics: University of Pennsylvania
+		  Working Papers in Linguistics},
+  editor	= {Williams, Alexander and Kaiser, Eli},
+  publisher	= {PRISM},
+  title		= {Event heads and the Distribution of Psych-roots},
+  year		= {2000}
+}
+
+@InBook{	  mcginnis2001exp,
+  address	= {Ottawa, Can.},
+  author	= {McGinnis, Martha},
+  booktitle	= {Proceedings of the 2000 CLA Annual Conference},
+  publisher	= {University of Ottawa},
+  title		= {Semantic and morphological restrictions in experiencer
+		  predicates},
+  year		= {2001}
+}
+
+@Article{	  kratzer2000stative,
+  author	= {Kratzer, Angelika},
+  journal	= {Proceedings of the Twenty-Sixth Annual Meeting of the
+		  Berkeley Linguistics Society: General Session and
+		  Parasession on Aspect (2000)},
+  title		= {Building statives},
+  year		= {2000}
+}
+
+@PhDThesis{	  alexeyenko2015manner,
+  address	= {Osnabr{\"u}ck},
+  author	= {Alexeyenko, Sascha},
+  school	= {University of Osnabr{\"u}ck},
+  title		= {The Syntax and Semantics of Manner Modification:
+		  Adjectives and Adverbs},
+  year		= {2015}
+}
+
+@Article{	  elliott2022intensionality,
+  author	= {Elliott, Patrick D.},
+  journal	= {Linguistics and Philosophy},
+  title		= {A flexible scope theory of intensionality},
+  year		= {2022}
+}
+
+@Article{	  cuervo2008alternancia,
+  author	= {Cuervo, Mar{\'i}a Cristina},
+  journal	= {RLA, Revista de Ling{\"u}{\'i}stica Te{\'o}rica y Aplicada},
+  number	= {1},
+  pages		= {55--79},
+  title		= {La alternancia causativa y su interacci{\'o}n con
+		  argumentos dativos},
+  volume	= {46},
+  year		= {2008}
+}
+
+@Book{		  aznar1996libro,
+  address	= {Barcelona},
+  author	= {Aznar Angl{\'e}s, Eduardo},
+  publisher	= {EUB},
+  title		= {El mon{\'o}logo interior. Un an{\'a}lisis textual y
+		  pragm{\'a}tico del lenguaje interior en la literatura},
+  year		= {1996}
+}
+
+@Book{		  parodi2022corpus,
+  editor	= {Parodi, Giovanni and Cantos-G{\'o}mez, Pascual and Howe,
+		  Chad},
+  publisher	= {Routledge},
+  title		= {Ling{\"u}{\'i}stica de corpus en espa{\~n}ol / The
+		  Routledge Handbook of Spanish Corpus Linguistics},
+  year		= {2022}
+}
+
 @Book{		  dixon2004adjectives,
   address	= {Oxford; New York},
   editor	= {Aikhenvald, Alexandra Y. and Dixon, Richard M. W.},
