--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -61,7 +61,7 @@
 }
 
 @Article{	  morimoto2020aspev,
-  author	= {Morimoto, Yuko and Universidad, Carlos III de Madrid},
+  author	= {Morimoto, Yuko},
   journal	= {Revista Espa{\~n}ola de Ling{\"u}{\'i}stica},
   number	= {50},
   pages		= {243--270},
@@ -48806,7 +48806,7 @@
 
 @Book{		  pavon2016las-relaciones-inter,
   address	= {Berlin, Boston},
-  editor	= {Lucero Pav{\'o}n, Mar{\'i}a Victoria},
+  editor	= {Pav{\'o}n Lucero, Mar{\'i}a Victoria},
   publisher	= {De Gruyter Mouton},
   title		= {Las relaciones interoracionales en espa{\~n}ol,
 		  {Categor{\'i}as} sint{\'a}cticas y subordinaci{\'o}n
