--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,44 @@
 
+@PhDThesis{	  bordonaba2017gusto,
+  address	= {Granada},
+  author	= {Bordonaba Plou, David},
+  school	= {Universidad de Granada},
+  title		= {Operadores de orden superior y predicados de gusto: Una
+		  aproximaci{\'o}n expresivista},
+  year		= {2017}
+}
+
+@Article{	  soria2019expressivism,
+  author	= {Soria Ruiz, Andr{\'e}s and Stojanovic, Isidora},
+  journal	= {Royal Institute of Philosophy Supplement},
+  pages		= {155--180},
+  title		= {On Linguistic Evidence for Expressivism},
+  volume	= {86},
+  year		= {2019}
+}
+
+@InBook{	  syrett2014adjectives,
+  address	= {Thousand Oaks},
+  author	= {Syrett, Kristen},
+  booktitle	= {Encyclopedia of Language Development},
+  editor	= {Brooks, Patricia and Kempe, Vera},
+  publisher	= {SAGE Publications, Inc.},
+  title		= {Adjectives},
+  year		= {2014}
+}
+
+@InBook{	  harley2017bundling,
+  address	= {Cambridge; NY},
+  author	= {Harley, Heidi},
+  booktitle	= {The Verbal Domain},
+  editor	= {D'Alessandro, Roberta and Franco, Irene and Gallego,
+		  {\'A}ngel J.},
+  publisher	= {Oxford University Press},
+  title		= {The bundling hypothesis and the disparate functions of
+		  little v},
+  year		= {2017}
+}
+
 @Article{	  pavon2012dativo,
   author	= {Pav{\'o}n Lucero, Mar{\'i}a Victoria},
   journal	= {Verba},
