--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,34 @@
 
+@Article{	  charlow2014fregegeach,
+  author	= {Charlow, Nate},
+  journal	= {Philosophical Studies},
+  number	= {3},
+  pages		= {635--665},
+  title		= {The problem with the Frege--Geach problem},
+  volume	= {167},
+  year		= {2014}
+}
+
+@PhDThesis{	  franzen2018evaluative,
+  address	= {Uppsala},
+  author	= {Franz{\'e}n, Nils},
+  pages		= {37},
+  school	= {Uppsala University},
+  title		= {Sense and Sensibility : Four Essays on Evaluative
+		  Discourse},
+  year		= {2018}
+}
+
+@Article{	  schroeder2008frege,
+  author	= {Schroeder, Mark},
+  journal	= {Philosophy Compass},
+  number	= {4},
+  pages		= {703--720},
+  title		= {What is the Frege-Geach Problem},
+  volume	= {3},
+  year		= {2008}
+}
+
 @PhDThesis{	  bordonaba2017gusto,
   address	= {Granada},
   author	= {Bordonaba Plou, David},
