--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,35 @@
 
+@Article{	  stemmer1999,
+  author	= {Stemmer, B},
+  journal	= {Brain Lang},
+  number	= {3},
+  pages		= {393--401},
+  title		= {An on-line interview with Noam Chomsky: on the nature of
+		  pragmatics and related issues.},
+  volume	= {68},
+  year		= {1999}
+}
+
+@InBook{	  picallo2008adjetiu,
+  address	= {Barcelona},
+  author	= {Picallo, Carme},
+  booktitle	= {Gram{\`a}tica del catal{\`a} contemporani},
+  editor	= {Sol{\`a}, Joan},
+  pages		= {1643-1688},
+  publisher	= {Editorial Emp{\'u}ries},
+  title		= {L'adjetiu i el Sintagma Adjetival},
+  year		= {2008}
+}
+
+@PhDThesis{	  gotowski2022adjectives,
+  address	= {New Brunswick, New Jersey},
+  author	= {Gotowski, Megan},
+  school	= {Rutgers, The State University of New Jersey},
+  title		= {Syntactic bootstrapping in the adjectival domain: learning
+		  subjective adjectives},
+  year		= {2022}
+}
+
 @Article{	  charlow2014fregegeach,
   author	= {Charlow, Nate},
   journal	= {Philosophical Studies},
