--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,44 @@
 
+@Article{	  merchant2022bucket,
+  author	= {Merchant, Doug},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {4},
+  pages		= {1117--1158},
+  title		= {What's in the bucket? Aspectual (non)compositionality in
+		  phrasal idioms},
+  volume	= {40},
+  year		= {2022}
+}
+
+@Article{	  corver2022adverbial,
+  author	= {Corver, Norbert},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {4},
+  pages		= {1023--1073},
+  title		= {Adverbial -s as last resort},
+  volume	= {40},
+  year		= {2022}
+}
+
+@Article{	  bochnak2022clausal,
+  author	= {Bochnak, M. Ryan and Hanink, Emily A.},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {4},
+  pages		= {979--1022},
+  title		= {Clausal embedding in Washo: Complementation vs.
+		  modification},
+  volume	= {40},
+  year		= {2022}
+}
+
+@Book{		  belletti2020smuggling,
+  address	= {New York},
+  editor	= {Belletti, Adriana and Collins, Chris},
+  publisher	= {Oxford University Press},
+  title		= {Smuggling in Syntax},
+  year		= {2020}
+}
+
 @Article{	  stemmer1999,
   author	= {Stemmer, B},
   journal	= {Brain Lang},
