--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,51 @@
 
+@Article{	  williams1976synaesthetic,
+  author	= {Williams, Joseph M.},
+  journal	= {Language},
+  number	= {2},
+  pages		= {461--478},
+  title		= {Synaesthetic Adjectives: A Possible Law of Semantic
+		  Change},
+  volume	= {52},
+  year		= {1976}
+}
+
+@InBook{	  hornstein2019minimalist,
+  address	= {Berlin},
+  author	= {Hornstein, Norbert},
+  booktitle	= {Current Approaches to Syntax},
+  editor	= {Kert{\'e}sz, Andr{\'a}s and Moravcsik, Edith and
+		  R{\'a}kosi, Csilla},
+  pages		= {187-214},
+  publisher	= {De Gruyter},
+  title		= {The Stupendous Success of the Minimalist Program},
+  year		= {2019}
+}
+
+@InBook{	  kertesz2019uncertainty,
+  address	= {Berlin},
+  author	= {Kert{\'e}sz, Andr{\'a}s and R{\'a}kosi, Csilla},
+  booktitle	= {Current Approaches to Syntax},
+  editor	= {Kert{\'e}sz, Andr{\'a}s and Moravcsik, Edith and
+		  R{\'a}kosi, Csilla},
+  pages		= {469-492},
+  publisher	= {De Gruyter},
+  title		= {The uncertainty of syntactic theorizing},
+  year		= {2019}
+}
+
+@InBook{	  steedman2019cgg,
+  address	= {Berlin},
+  author	= {Steedman, Mark},
+  booktitle	= {Current Approaches to Syntax},
+  editor	= {Kert{\'e}sz, Andr{\'a}s and Moravcsik, Edith and
+		  R{\'a}kosi, Csilla},
+  pages		= {389-420},
+  publisher	= {De Gruyter},
+  title		= {Combinatory Categorial Grammar},
+  year		= {2019}
+}
+
 @Article{	  merchant2022bucket,
   author	= {Merchant, Doug},
   journal	= {Natural Language \& Linguistic Theory},
