--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,38 @@
 
+@Book{		  garavitoschwieter2021introducing,
+  address	= {Cambridge, UK},
+  editor	= {Bruhn de Garavito, Joyce and Schwieter, John W.},
+  publisher	= {Cambridge University Press},
+  title		= {Introducing Linguistics: Theoretical and Applied
+		  Approaches},
+  year		= {2021}
+}
+
+@Book{		  harris1995historical,
+  author	= {Harris, Alice C. and Campbell, Lyle},
+  pages		= {506},
+  publisher	= {Cambridge University Press},
+  title		= {Historical Syntax in Cross-Linguistic Perspective},
+  year		= {1995}
+}
+
+@Book{		  campbell2013instructor,
+  address	= {Cambridge, Mass.},
+  author	= {Campbell, Lyle},
+  publisher	= {Edinburgh University Pres},
+  title		= {Historical linguistics. An introduction. Instructor
+		  Guide},
+  year		= {2013}
+}
+
+@Book{		  campbell2013historical,
+  address	= {Cambridge, Mass.},
+  author	= {Campbell, Lyle},
+  publisher	= {Edinburgh University Pres},
+  title		= {Historical linguistics. An introduction},
+  year		= {2013}
+}
+
 @Article{	  williams1976synaesthetic,
   author	= {Williams, Joseph M.},
   journal	= {Language},
