--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,22 @@
 
+@Article{	  wagiel2022events,
+  author	= {W{\k a}giel, Marcin},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Quantifying over hidden (parts of) events},
+  volume	= {45},
+  year		= {2022}
+}
+
+@Article{	  satik2022binding,
+  author	= {Satik, Deniz},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Unraveling Balinese Binding},
+  volume	= {7},
+  year		= {2022}
+}
+
 @Book{		  garavitoschwieter2021introducing,
   address	= {Cambridge, UK},
   editor	= {Bruhn de Garavito, Joyce and Schwieter, John W.},
